# shoptrack-backend

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
instance/: shoptrack.sqlite
shoptrack/: __init__.py  auth.py  db.py  schema.sql  stock.py  validation.py
tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py  test_stock.py
