[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shoptrack-factory-v2"
version = "0.1.0"
description = "ShopTrack Flask inventory management app"
requires-python = ">=3.8"

dependencies = [
    "Flask>=2.3.0",
    "Werkzeug>=2.3.0",
]
